export interface Category {
  id?: string | null;
  name: string | null;
  description: string | null;
  account_id: string | null;
  created_at?: string;
  updated_at?: string;
}
