erDiagram

accounts {
    uuid id PK
    string name
    string email
    string phone %% allow null
    string document %% allow null
    string zipcode %% allow null
    string address_number %% allow null
    string type %% ADMIN, USER
    string gateway_customer_id %% allow null
    text ia_token %% default null
    timestamp confirmed_at
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

tokens {
    uuid id PK
    string type %% REFRESH_TOKEN, ACCESS_TOKEN
    string token
    uuid account_id FK
    uuid user_id FK
    timestamp revoked_at %% allow null
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at %% allow null
}

users {
    uuid id PK
    string name
    string email
    string password
    text token
    string type %% ADMIN, USER
    boolean is_active %% default true
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

customers {
    uuid id PK
    string name
    string document %% allow null
    string phone %% allow null
    string email %% allow null
    string street %% allow null
    string number %% allow null
    string city %% allow null
    string state %% allow null
    string neighborhood %% allow null
    string zipcode %% allow null
    string complement %% allow null
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

products {
    uuid id PK
    string name
    decimal value %% (10, 2) default 0
    text description %% allow null
    string barcode %% allow null
    uuid category_id FK %% allow null
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

categories {
    uuid id PK
    string name
    text description %% allow null
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

supliers {
    uuid id PK
    string name
    string phone
    string email
    string responsible_name
    text observations %% allow null
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

stocks {
    uuid id PK
    uuid product_id FK
    decimal quantity %% (10, 2) default 0
    decimal min_quantity %% (10, 2) default 0
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

stock_records {
    uuid id PK
    uuid stock_id FK
    decimal quantity %% (10, 2) default 0
    string type %% ENTRADA, SAIDA
    text observation %% allow null
    uuid user_id FK
    uuid movement_stage_id FK %% allow null
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

movement_stages {
    uuid id PK
    string name
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

inventory_counts {
    uuid id PK
    uuid product_id FK
    decimal counted_quantity %% (10, 2) default 0
    decimal stock_quantity %% (10, 2) default 0
    string status %% DIVERGENTE, CONFORME
    text observation %% allow null
    uuid user_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
}

permissions {
    uuid id PK
    string name
    string key_group
    string key
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at %% allow null
}

profiles {
    uuid id PK
    string name
    string key %% allow null, unique(key, account_id)
    uuid account_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at %% allow null
}

profile_permissions {
    uuid id PK
    uuid profile_id FK
    uuid permission_id FK
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at %% allow null
}

accounts ||--o{ profiles : account_id
profiles ||--o{ profile_permissions : profile_id
permissions ||--o{ profile_permissions : permission_id
users }o--o| profiles : profile_id
